--- a/manifest.json
+++ b/manifest.json
@@ -3,25 +3,21 @@
   "name": "FlowWatch",
   "version": "1.0",
   "description": "A simple stopwatch Chrome extension.",
-  "permissions": ["storage", "activeTab"],
+  "permissions": [
+    "storage",
+    "activeTab"
+  ],
   "background": {
-    "scripts": ["background.js"],
+    "scripts": [
+      "background.js"
+    ],
     "persistent": false
   },
-  "browser_action": {
-    "default_popup": "popup.html",
-    "default_icon": {
-      "16": "icon16.png",
-      "48": "icon48.png",
-      "128": "icon128.png"
-    }
-  },
   "icons": {
-    "16": "icon16.png",
-    "48": "icon48.png",
-    "128": "icon128.png"
+    "48": "images/icon48.png",
+    "96": "images/icon96.png"
   },
   "web_accessible_resources": [
-    "records.html"
+    "record.html"
   ]
 }
